--- a/src/App.css
+++ b/src/App.css
@@ -52,12 +52,14 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
   height: 300px;
   background-color: yellow;
   position: absolute;
+  touch-action: none;
+  margin: 100px;
 
 }
 
 textarea {
   width: 100%;
-  height: 250px;
+  height: 225px;
   background-color: transparent;
   
 }
@@ -83,4 +85,10 @@ body {
   width: 90%;
   margin-left: 5%;
   margin-top: 5%;
+}
+
+input[type=text] {
+  background-color: transparent;
+  width: 50%;
+  border: none;
 }
