--- a/src/App.scss
+++ b/src/App.scss
@@ -73,7 +73,10 @@ form {
   top: 25%;
   right: 50%;
   p {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     line-height: 1.7rem;
+    .Juno {
+      color: #ff0;
+    }
   }
 }
