--- a/src/Components/App.scss
+++ b/src/Components/App.scss
@@ -8,23 +8,6 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 
-
-// .Posted {
-//   width: 100%;
-//   height: 400px;
-// }
-// .Post {
-//   width: 300px;
-//   height: 300px;
-//   background-color: transparent;
-//   position: absolute;
-//   touch-action: none;
-  
-
-// }
-
-
-
 body {
   background-image: url(../images/board.jpg);
   background-size: cover;
@@ -78,6 +61,7 @@ form {
     .Juno {
       color: #ff0;
       text-align: center;
+      width: 75%;
     }
   }
 }
