--- a/src/Components/options.html
+++ b/src/Components/options.html
@@ -41,3 +41,20 @@ return (
 }
 
 export default Post -->
+
+<!-- Axios call that I may want to revisit-->
+
+    <!-- // const [ time, setTime] = useState([])
+    
+    // useEffect(() => {
+    // axios({
+    // url: 'https://rb7paj3rwfgcelny6aaqqagxna0idefd.lambda-url.us-east-1.on.aws/'
+    // }).then((res) => {
+    // const timeStamp = res.data;
+    // const newTimeStamp = new Date(timeStamp * 1000);
+    // console.log(newTimeStamp)
+    
+    
+    // setTime(newTimeStamp)
+    // })
+    // }, []) -->
